--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cordova-android": "8.1.0",
     "core-js": "^2.5.4",
     "firebase": "^6.6.2",
+    "ionic-selectable": "^4.4.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
