--- a/platforms/android/project.properties
+++ b/platforms/android/project.properties
@@ -12,3 +12,5 @@ target=android-28
 android.library.reference.1=CordovaLib
 android.library.reference.2=app
 cordova.system.library.1=com.android.support:support-annotations:27.+
+cordova.gradle.include.1=phonegap-plugin-barcodescanner/starter-barcodescanner.gradle
+cordova.system.library.2=com.android.support:support-v4:27.+
